--- a/lib/stamp_map_web/components/layouts/app.html.heex
+++ b/lib/stamp_map_web/components/layouts/app.html.heex
@@ -1,8 +1,36 @@
 <.flash_group flash={@flash} />
 
-<div class="grid grid-rows-12 grid-flow-col gap-4 px-4 py-4 leading-10">
-  <div class="p-4 w-full rounded-sm border-b-2 col-span-6">
+<div class="flex flex-col h-screen">
+  <div class="flex flex-row w-full p-4 justify-between">
     <div class="text-2xl">Inges frimerkekart</div>
+    <div class="flex">
+      <ul class="z-10 flex items-center gap-4 px-4 sm:px-6 lg:px-8 justify-end">
+        <%= if @current_user do %>
+          <li class="text-[0.8125rem] leading-6 text-zinc-900">
+            {@current_user.email}
+          </li>
+          <li>
+            <.link
+              href={~p"/users/log_out"}
+              method="delete"
+              class="text-[0.8125rem] leading-6 text-zinc-900 font-semibold hover:text-zinc-700"
+            >
+              Logg ut
+            </.link>
+          </li>
+        <% else %>
+          <li>
+            <.link
+              href={~p"/users/log_in"}
+              class="text-[0.8125rem] leading-6 text-zinc-900 font-semibold hover:text-zinc-700"
+            >
+              Logg inn
+            </.link>
+          </li>
+        <% end %>
+      </ul>
+    </div>
   </div>
+
   {@inner_content}
 </div>
