--- a/lib/stamp_map_web/live/stamp_map_live.html.heex
+++ b/lib/stamp_map_web/live/stamp_map_live.html.heex
@@ -6,8 +6,13 @@
         class="h-full w-full border-2 rounded-xl row-span-11 col-span-5"
         phx-update="ignore"
       >
-        <!-- <div id="map" class="h-full w-full rounded-xl" phx-hook="MapHook" data-access-token={@access_token} /> -->
-        <div id="map" class="h-full w-full rounded-xl" phx-hook="MapHook" />
+        <div
+          id="map"
+          class="h-full w-full rounded-xl"
+          phx-hook="MapHook"
+          data-access-token={@access_token}
+        />
+        <!-- <div id="map" class="h-full w-full rounded-xl" phx-hook="MapHook" /> -->
       </div>
     </main>
     <aside class="w-full sm:w-1/3 md:w-1/4 px-2">
@@ -39,7 +44,7 @@
             Se frimerker <.icon name="hero-squares-2x2" />
           </.button>
 
-          <.button class="w-full h-full" phx-click={show_modal("add-stamp-modal")}>
+          <.button class="w-full h-full" phx-click="add-stamp">
             Legg til <.icon name="hero-plus" />
           </.button>
         </div>
@@ -48,6 +53,6 @@
   </div>
 </div>
 
-<.modal id="add-stamp-modal" show={true}>
+<.modal id="add-stamp-modal">
   Huh, testing
 </.modal>
